syntax = "proto3";

package confidence.iam.v1;

option go_package = "github.com/spotify/confidence-resolver-rust/mock-support-server/genproto/mock;mockpb";

import "google/api/annotations.proto";

service AuthService {
  rpc RequestAccessToken(RequestAccessTokenRequest) returns (AccessToken) {
    option (google.api.http) = {
      post: "/v1/oauth/token"
    };
  }
}

message RequestAccessTokenRequest {
  //The grant type. Currently only "client_credentials" is supported
  string grant_type = 1;
  // The client id of the client to ge the token for
  string client_id = 2;
  // The secret of the client to get the token for
  string client_secret = 3;
}

message AccessToken {
  //The access token that kan be used to call the api
  string access_token = 1;
  // The ttl of the Access Token token from the time it was issued (in seconds).
  int64 expires_in = 2;
}
